config/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: short-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template:
    metadata:
      name: short-api
      labels:
        components: backend
    spec:
      containers:
       - name: short-api
         image: antonlarichev/short-api:v1.0
         resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
         ports:
         - containerPort: 3000
