config/app-deplyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment #задаем имя деплоймента
spec:
  replicas: 1
  selector:
    matchLabels:
      components: frontend  
  template:  #задаем шаблон
    metadata:
      name: conv-app
      labels:
        components: frontend
    spec:
      containers:
       - name: short-app
         image: antonlarichev/conv-app:1.2
         resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
         ports:
          - containerPort: 80
