config/converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip 
spec:
  type: ClusterIP
  selector:
    components: service 
  ports:
  - port: 4000
    protocol: TCP
