config/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  selector:
    type: ClusterIP
    components: backend
  ports:
  - port: 5432
    protocol: TCP
