config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-port
spec:
  type: NodePort
  selector:
    components: conv-app
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31300
